--- a/blog/templates/post_form.html
+++ b/blog/templates/post_form.html
@@ -1,13 +1,10 @@
-<html>
-    <head>
+{% extends 'base.html' %}
 
-    </head>
-    <body>
-        <h1>Create Post Form</h1>
-        <form method='POST' action=''>
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type='submit' value='Create Post'>
-        </form>
-    </body>
-</html>
+{% block content %}
+    <h1>This is the Form Page</h1>
+    <form method='POST' action=''>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type='submit' value='Create Post'>
+    </form>
+{% endblock %}
