--- a/blog/templates/post_list.html
+++ b/blog/templates/post_list.html
@@ -1,10 +1,9 @@
-<html>
-    <head>
+{% extends 'base.html' %}
 
-    </head>
-    <body>
-        <h1>This is the {{ title }} page</h1>
-        {% for obj in object_list %}
+{% block content %}
+<h1>This is the {{ title }} Page</h1>
+<div class="box-wrap">
+    {% for obj in object_list %}
         <div class="box">
             <h4>
                 <a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
@@ -16,6 +15,6 @@
                 {{ obj.timestamp }}
             </p>
         </div>
-        {% endfor %}
-    </body>
-</html>
+    {% endfor %}
+</div>
+{% endblock %}
