--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            {% block head_title %}A Django Blog | {{ title }} | {{ instance.title }}{% endblock %}
+            {% block head_title %}FC Blog | {{ title }} | {{ instance.title }}{% endblock %}
         </title>
     </head>
     <body>
