--- a/blog/templates/post_list.html
+++ b/blog/templates/post_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>This is the {{ title }} Page</h1>
+<h1>{{ title }} Page</h1>
 <div class="box-wrap">
     {% for obj in object_list %}
         <div class="box">
