--- a/blog/templates/post_list.html
+++ b/blog/templates/post_list.html
@@ -1,20 +1,51 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ title }} Page</h1>
-<div class="box-wrap">
-    {% for obj in object_list %}
-        <div class="box">
-            <h4>
-                <a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
-            </h4>
-            <p>
-                {{ obj.content }}
-            </p>
-            <p>
-                {{ obj.timestamp }}
-            </p>
+<div class="col-sm-8 col-sm-offset-2">
+    <h1>{{ title }} Page</h1>
+    <div class="row">
+        {% for obj in object_list %}
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                {% if obj.image%}
+                    <a href="{{ obj.get_absolute_url }}">
+                        <img src="{{ obj.image.url }}" class="img-responsive"/>
+                    </a>
+                {% endif %}
+                <div class="caption">
+                    <h3><a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a></h3>
+                    <p>
+                        {{ obj.content | linebreaks|truncatewords:20 }}
+                    </p>
+                    <p><small>{{ obj.timestamp|date:"d-M-Y" }}</small></p>
+                    <p>
+                        <a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a>
+                    </p>
+                </div>
+            </div>
         </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
+
+    <div class="pagination">
+    <span class="step-links">
+        {% if object_list.has_previous %}
+            <a href="?{{ page_req_var }}={{ object_list.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
+        </span>
+
+        {% if object_list.has_next %}
+            <a href="?{{ page_req_var }}={{ object_list.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+    </div>
+
+
 </div>
+
+
+
 {% endblock %}
