--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,23 +1,22 @@
+{% load staticfiles %}
 <html>
     <head>
         <title>
             {% block head_title %}FC Blog | {{ title }} | {{ instance.title }}{% endblock %}
         </title>
+        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     </head>
     <body>
-        {% if messages %}
-            <div class="messages">
-                    <ul class="messages">
-                    {% for message in messages %}
-                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                    </ul>
-            </div>
-        {% endif %}
+        {% include "messages_display.html" %}
         <div class="container">
             {% block content %}
 
             {% endblock %}
         </div>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </body>
 </html>
