--- a/blog/templates/post_form.html
+++ b/blog/templates/post_form.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>This is the Form Page</h1>
-    <form method='POST' action=''>
+<div class="col-sm-8 col-sm-offset-2">
+    <h1>Form Page</h1>
+    <form method='POST' action='' enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type='submit' value='Create Post'>
+        <input class="btn btn-default" type='submit' value='Create Post'>
     </form>
+</div>
 {% endblock %}
