--- a/blog/templates/post_list.html
+++ b/blog/templates/post_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="col-sm-8 col-sm-offset-2">
-    <h1>{{ title }} Page</h1>
+    <h1>{{ title }} of Posts</h1>
     <div class="row">
         {% for obj in object_list %}
         <div class="col-sm-6 col-md-4">
